Bug 253679 - [margin-trim] Self collapsing children have incorrect top offset at the end of a block container with block-end margin trim
Summary: [margin-trim] Self collapsing children have incorrect top offset at the end o...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Sammy Gill
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-09 15:37 PST by Sammy Gill
Modified: 2023-03-16 10:46 PDT (History)
4 users (show)

See Also:


Attachments
Testcase (1002 bytes, text/html)
2023-03-09 15:37 PST, Sammy Gill
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sammy Gill 2023-03-09 15:37:05 PST
Created attachment 465385 [details]
Testcase

When margin-trim: block-end is specified on a block container, any self collapsing children will have the wrong offset. They get an offset as if none of the block-end margins were trimmed even though the block container has the correct after margin (i.e. the block-container only uses the block-end margin specified on the container itself or 0 if it is not specified).
Comment 1 Radar WebKit Bug Importer 2023-03-09 15:37:28 PST
<rdar://problem/106524654>
Comment 2 Sammy Gill 2023-03-09 17:31:06 PST
Pull request: https://github.com/WebKit/WebKit/pull/11339
Comment 3 EWS 2023-03-16 10:46:52 PDT
Committed 261750@main (b9ee985deec4): <https://commits.webkit.org/261750@main>

Reviewed commits have been landed. Closing PR #11339 and removing active labels.